[gd_scene load_steps=15 format=3 uid="uid://djavrnimm0hwa"]

[ext_resource type="Script" path="res://Logica/mision_mini_panel.gd" id="1_1fohc"]
[ext_resource type="Texture2D" uid="uid://cgf5rnsylcx0q" path="res://Recursos/Sprites/pomodoro_mini.png" id="2_3vgtc"]
[ext_resource type="FontFile" uid="uid://br40grkrm3qqp" path="res://Recursos/Fonts/Montserrat-BoldItalic.ttf" id="2_6wlkx"]
[ext_resource type="Texture2D" uid="uid://c5abvxpn10lwo" path="res://Recursos/Sprites/arrow.png" id="4_tnhdp"]
[ext_resource type="Texture2D" uid="uid://bgq3id6gwjdq1" path="res://Recursos/Sprites/cheker_false.png" id="5_v8mly"]
[ext_resource type="Texture2D" uid="uid://bhuy7r16l8ewv" path="res://Recursos/Sprites/cheker_true.png" id="6_3852i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o764r"]
bg_color = Color(0.0196078, 0.0196078, 0.0196078, 0.796078)
border_color = Color(0.0923971, 0.0923971, 0.092397, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x8awx"]
bg_color = Color(0.768627, 0.0980392, 0.0980392, 1)
border_blend = true
corner_radius_top_left = 14
corner_radius_top_right = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dme6"]
bg_color = Color(0.0941176, 0.105882, 0.180392, 1)
border_blend = true
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
anti_aliasing = false

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7cx7x"]
texture = ExtResource("4_tnhdp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4o63d"]
texture = ExtResource("4_tnhdp")
modulate_color = Color(0.670555, 0.739823, 0.873451, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x5fyr"]
texture = ExtResource("4_tnhdp")
expand_margin_bottom = 2.0
modulate_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5buh8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jbkut"]

[node name="MisionMiniPanel" type="Node2D"]
script = ExtResource("1_1fohc")
metadata/_edit_horizontal_guides_ = [24.0, 44.0, 39.0]
metadata/_edit_vertical_guides_ = [312.0]

[node name="shadow" type="Panel" parent="."]
offset_left = 8.0
offset_top = 56.0
offset_right = 328.0
offset_bottom = 368.0
theme_override_styles/panel = SubResource("StyleBoxFlat_o764r")

[node name="tilteMision" type="Panel" parent="."]
offset_top = 48.0
offset_right = 312.0
offset_bottom = 96.0
theme_override_styles/panel = SubResource("StyleBoxFlat_x8awx")

[node name="Label" type="Label" parent="tilteMision"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 150.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.0941176, 0.105882, 0.180392, 1)
theme_override_fonts/font = ExtResource("2_6wlkx")
theme_override_font_sizes/font_size = 20
text = "Add a mision..."

[node name="PomoPanel" type="Panel" parent="."]
offset_top = 96.0
offset_right = 312.0
offset_bottom = 352.0
scale = Vector2(0.999771, 0.999771)
theme_override_styles/panel = SubResource("StyleBoxFlat_5dme6")
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 8.00183
offset_top = 24.0055
offset_right = 43.3451
offset_bottom = 56.0055
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect2" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 54.0124
offset_top = 24.0055
offset_right = 89.3557
offset_bottom = 56.0055
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect3" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 104.024
offset_top = 24.0055
offset_right = 139.367
offset_bottom = 56.0055
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect4" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 152.035
offset_top = 24.0055
offset_right = 187.378
offset_bottom = 56.0055
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect5" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 200.046
offset_top = 24.0055
offset_right = 235.389
offset_bottom = 56.0055
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect6" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 246.056
offset_top = 24.0055
offset_right = 281.4
offset_bottom = 56.0055
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect7" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 8.00183
offset_top = 80.0183
offset_right = 43.3451
offset_bottom = 112.018
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect8" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 56.0128
offset_top = 80.0183
offset_right = 91.3561
offset_bottom = 112.018
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect9" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 104.024
offset_top = 80.0183
offset_right = 139.367
offset_bottom = 112.018
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect10" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 152.035
offset_top = 80.0183
offset_right = 187.378
offset_bottom = 112.018
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect11" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 200.046
offset_top = 80.0183
offset_right = 235.389
offset_bottom = 112.018
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect12" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 246.056
offset_top = 80.0183
offset_right = 281.4
offset_bottom = 112.018
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect13" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 8.00183
offset_top = 136.031
offset_right = 43.3451
offset_bottom = 168.031
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect14" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 56.0128
offset_top = 136.031
offset_right = 91.3561
offset_bottom = 168.031
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect15" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 104.024
offset_top = 136.031
offset_right = 139.367
offset_bottom = 168.031
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect16" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 152.035
offset_top = 136.031
offset_right = 187.378
offset_bottom = 168.031
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect17" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 200.046
offset_top = 136.031
offset_right = 235.389
offset_bottom = 168.031
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect18" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 244.056
offset_top = 136.031
offset_right = 279.399
offset_bottom = 168.031
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect19" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 8.00183
offset_top = 192.044
offset_right = 43.3451
offset_bottom = 224.044
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect20" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 56.0128
offset_top = 192.044
offset_right = 91.3561
offset_bottom = 224.044
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect21" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 104.024
offset_top = 192.044
offset_right = 139.367
offset_bottom = 224.044
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect22" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 152.035
offset_top = 192.044
offset_right = 187.378
offset_bottom = 224.044
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect23" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 198.045
offset_top = 192.044
offset_right = 233.389
offset_bottom = 224.044
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="TextureRect24" type="TextureRect" parent="PomoPanel"]
visible = false
layout_mode = 0
offset_left = 244.056
offset_top = 192.044
offset_right = 279.399
offset_bottom = 224.044
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_3vgtc")
expand_mode = 3

[node name="Back" type="Button" parent="."]
offset_left = 240.0
offset_top = 8.0
offset_right = 265.0
offset_bottom = 32.0
scale = Vector2(1.3, 1.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_7cx7x")
theme_override_styles/hover = SubResource("StyleBoxTexture_4o63d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_x5fyr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5buh8")

[node name="Forward" type="Button" parent="."]
offset_left = 312.0
offset_top = 8.0
offset_right = 336.0
offset_bottom = 32.0
scale = Vector2(-1.3, 1.3)
theme_override_styles/normal = SubResource("StyleBoxTexture_7cx7x")
theme_override_styles/hover = SubResource("StyleBoxTexture_4o63d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_x5fyr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5buh8")

[node name="Selected" type="CheckBox" parent="."]
offset_left = 201.0
offset_top = 9.0
offset_right = 233.0
offset_bottom = 41.0
theme_override_icons/checked = ExtResource("6_3852i")
theme_override_icons/unchecked = ExtResource("5_v8mly")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jbkut")

[node name="numberLab" type="Label" parent="."]
offset_left = 2.0
offset_top = 16.0
offset_right = 42.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(0.0941176, 0.105882, 0.180392, 1)
theme_override_fonts/font = ExtResource("2_6wlkx")
theme_override_font_sizes/font_size = 23
text = "x0"

[node name="cheat" type="Button" parent="."]
visible = false
offset_left = 40.0
offset_right = 94.0
offset_bottom = 31.0
text = "Cheat"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Forward" to="." method="_on_forward_pressed"]
[connection signal="toggled" from="Selected" to="." method="_on_selected_toggled"]
